force-app/main/default/objects/A_File__c/A_File__c.object-meta.xml
<CustomObject>
    <label>A File</label>
    <nameField>
        <label>A Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>A Files</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>