force-app/main/default/objects/A_File__c/fields/Country_Of_Origin__c.field-meta.xml
<CustomField>
    <fullName>Country_Of_Origin__c</fullName>
    <label>Country Of Origin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Papua New Guinea</fullName>
            </value>
            <value>
                <fullName>Cambodia</fullName>
            </value>
            <value>
                <fullName>Sudan</fullName>
            </value>
            <value>
                <fullName>Kazakhstan</fullName>
            </value>
            <value>
                <fullName>Paraguay</fullName>
            </value>
            <value>
                <fullName>Portugal</fullName>
            </value>
            <value>
                <fullName>Syria</fullName>
            </value>
            <value>
                <fullName>Bahamas</fullName>
            </value>
            <value>
                <fullName>North Korea</fullName>
            </value>
            <value>
                <fullName>Greece</fullName>
            </value>
            <value>
                <fullName>Mongolia</fullName>
            </value>
            <value>
                <fullName>Morocco</fullName>
            </value>
            <value>
                <fullName>Iran</fullName>
            </value>
            <value>
                <fullName>Panama</fullName>
            </value>
            <value>
                <fullName>Guatemala</fullName>
            </value>
            <value>
                <fullName>Iraq</fullName>
            </value>
            <value>
                <fullName>Chile</fullName>
            </value>
            <value>
                <fullName>Laos</fullName>
            </value>
            <value>
                <fullName>Nepal</fullName>
            </value>
            <value>
                <fullName>Argentina</fullName>
            </value>
            <value>
                <fullName>Ukraine</fullName>
            </value>
            <value>
                <fullName>Tanzania</fullName>
            </value>
            <value>
                <fullName>Zambia</fullName>
            </value>
            <value>
                <fullName>Ghana</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>Belgium</fullName>
            </value>
            <value>
                <fullName>Namibia</fullName>
            </value>
            <value>
                <fullName>Finland</fullName>
            </value>
            <value>
                <fullName>Comoros</fullName>
            </value>
            <value>
                <fullName>South Africa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>