force-app/main/default/objects/A_File__c/fields/Digitized_Flag__c.field-meta.xml
<CustomField>
    <fullName>Digitized_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Digitized Flag</label>
    <type>Checkbox</type>
</CustomField>