force-app/main/default/objects/A_File__c/fields/Handcrafted_for_eWRTS_Demo_Scenario__c.field-meta.xml
<CustomField>
    <fullName>Handcrafted_for_eWRTS_Demo_Scenario__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Handcrafted for eWRTS Demo Scenario</description>
    <label>Handcrafted for eWRTS Demo Scenario</label>
    <type>Checkbox</type>
</CustomField>