force-app/main/default/objects/A_File__c/fields/Port_of_Entry__c.field-meta.xml
<CustomField>
    <fullName>Port_of_Entry__c</fullName>
    <label>Port of Entry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Calexico East - Class A, California - 2507</fullName>
            </value>
            <value>
                <fullName>Tucson, Arizona - 2609</fullName>
            </value>
            <value>
                <fullName>Amarillo, Texas - 5502</fullName>
            </value>
            <value>
                <fullName>Nogales, Arizona - 2604</fullName>
            </value>
            <value>
                <fullName>Buffalo, New York - 0901</fullName>
            </value>
            <value>
                <fullName>Rio Grande City, Texas - 2307</fullName>
            </value>
            <value>
                <fullName>Albuquerque, New Mexico - 2407</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>