force-app/main/default/objects/A_File__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Birthdate__c</columns>
    <columns>Country_Of_Origin__c</columns>
    <columns>Gender__c</columns>
    <columns>Port_of_Entry__c</columns>
    <columns>Digitized_Flag__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>